# lucene-cyborg-cpp

./: CMakeLists.txt  README.md  tantivy_bench_pisa_comparison.cpp  tantivy_search_benchmark.cpp  tantivy_search_result_validation.cpp
src/codecs/: BlockTermState.hpp  Codec.hpp  CodecUtil.cpp  CodecUtil.hpp  EffectiveCodecs.hpp  FieldInfosFormat.hpp  FieldsProducer.hpp  MultiLevelSkipListReader.hpp  NormsProducer.hpp  PerFieldPostingsFormatAdaptor.hpp  PostingsFormat.hpp  PostingsReaderBase.hpp
src/codecs/lucene90/: DocPosPayFilePointers.hpp  ForUtil.hpp  IndexedDisi.cpp  IndexedDisi.hpp  Lucene90Constants.hpp  Lucene90ImpactsEnum.hpp  Lucene90NormsEntry.hpp  Lucene90NormsFormat.cpp  Lucene90NormsFormat.hpp  Lucene90NormsProducer.cpp  Lucene90NormsProducer.hpp  Lucene90PostingsEnum.hpp  Lucene90PostingsFormat.cpp  Lucene90PostingsFormat.hpp  Lucene90PostingsReader.cpp  Lucene90PostingsReader.hpp  Lucene90ScoreSkipReader.hpp  Lucene90SegmentInfoFormat.cpp  Lucene90SegmentInfoFormat.hpp  Lucene90SkipReader.hpp  Lucene90TermState.hpp  PForUtil.cpp  PForUtil.hpp  PostingsReaderBuffersAndData.hpp  gen_ForUtil.py
src/codecs/lucene94/: Lucene94FieldInfosFormat.cpp  Lucene94FieldInfosFormat.hpp
src/codecs/lucene95/: Lucene95Codec.cpp  Lucene95Codec.hpp
src/index/: BaseTermsEnum.hpp  DocValues.cpp  DocValues.hpp  DocValuesIterator.hpp  DocValuesType.hpp  FieldInfo.cpp  FieldInfo.hpp  FieldInfos.cpp  FieldInfos.hpp  Fields.hpp  FindSegmentsFile.hpp  Impacts.hpp  ImpactsEnum.hpp  ImpactsSource.hpp  IndexFileNames.cpp  IndexFileNames.hpp  IndexOptions.hpp  IndexWriterConstants.hpp  LeafMetaData.hpp  LeafReaderContext.hpp  MMapDirectoryReader.cpp  MMapDirectoryReader.hpp  NumericDocValues.hpp  PostingsEnum.hpp  SegmentCommitInfo.cpp  SegmentCommitInfo.hpp  SegmentCoreReaders.cpp  SegmentCoreReaders.hpp  SegmentInfo.cpp  SegmentInfo.hpp  SegmentInfos.cpp  SegmentInfos.hpp  SegmentReadState.hpp  SegmentReader.cpp  SegmentReader.hpp  SlowImpactsEnum.cpp  SlowImpactsEnum.hpp  Terms.hpp  TermsEnum.hpp  TermsStats.hpp  (+2 more)
src/java/: JavaLong.cpp  JavaLong.hpp
src/pco/factory/: PcoTableModel.hpp  PcoTargetClassFactoryOfLuceneCyborgSearchBlockMaxConjunctionScorerIteratorPco.cpp  PcoTargetClassFactoryOfLuceneCyborgSearchBlockMaxConjunctionScorerIteratorPco.hpp  PcoTargetClassFactoryOfLuceneCyborgSearchDefaultBulkScorerPco.cpp  PcoTargetClassFactoryOfLuceneCyborgSearchDefaultBulkScorerPco.hpp  PcoTargetClassFactoryOfLuceneCyborgSearchImpactsDISIPco.cpp  PcoTargetClassFactoryOfLuceneCyborgSearchImpactsDISIPco.hpp  PcoTargetClassFactoryOfLuceneCyborgSearchQueryBooleanScorerOrCollectorReplayer.cpp  PcoTargetClassFactoryOfLuceneCyborgSearchQueryBooleanScorerOrCollectorReplayer.hpp  PcoTargetClassFactoryOfLuceneCyborgSearchQueryConjunctionDisiPco.cpp  (+1 more)
src/search/: BulkScorer.hpp  Collector.hpp  CollectorManager.hpp  DefaultBulkScorer.hpp  DefaultBulkScorerPco.hpp  DisiPriorityQueue.cpp  DisiPriorityQueue.hpp  DisiWrapper.hpp  DocIdConsumer.hpp  DocIdSetIterator.cpp  DocIdSetIterator.hpp  DocIdStream.hpp  HitQueue.hpp  ImpactsDISIPco.hpp  ImpactsDisi.cpp  ImpactsDisi.hpp  IndexSearcher.cpp  IndexSearcher.hpp  LeafCollector.hpp  LeafSimScorer.cpp  LeafSimScorer.hpp  MatchCountCollectorManager.hpp  MaxScoreCache.cpp  MaxScoreCache.hpp  Scorable.hpp  ScoreAndDoc.hpp  ScoreDoc.hpp  ScoreMode.hpp  Scorer.hpp  ScorerSupplier.hpp  ScorerUtil.cpp  ScorerUtil.hpp  SearchContext.hpp  Similarity.cpp  Similarity.hpp  SimpleTopScoreDocCollector.cpp  SimpleTopScoreDocCollector.hpp  SimpleTopScoreDocCollectorManager.cpp  SimpleTopScoreDocCollectorManager.hpp  TopDocs.hpp  (+7 more)
src/store/: BufferedChecksumMemoryDataInput.cpp  BufferedChecksumMemoryDataInput.hpp  CloseableMemoryDataInput.cpp  CloseableMemoryDataInput.hpp  DataInput.hpp  MMapDirectory.cpp  MMapDirectory.hpp  MappedMemory.cpp  MappedMemory.hpp  MeasureDataInput.cpp  MeasureDataInput.hpp  ReadOnlyDataInput.hpp
src/util/: BitSet.cpp  BitSet.hpp  Bits.hpp  BufferedChecksum.cpp  BufferedChecksum.hpp  BytesFstEnumerator.cpp  BytesFstEnumerator.hpp  FixedBitSet.cpp  FixedBitSet.hpp  Fst.hpp  FstBytesOutput.cpp  FstBytesOutput.hpp  FstReverseBytesReader.cpp  FstReverseBytesReader.hpp  IoUtils.cpp  IoUtils.hpp  LinearAllocator.cpp  LinearAllocator.hpp  LinearAllocatorAdaptorForSTL.hpp  Macros.hpp  MathUtil.cpp  MathUtil.hpp  MemoryUtils.hpp  PointerTypes.hpp  PriorityQueue.hpp  StringHelper.hpp  TypeInfo.hpp  Version.cpp  Version.hpp  ZLibCrc32.c  ZLibCrc32.h
(+99 files in other folders)
